<resources>
    <string name="app_name">Moonlight</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Google_Login</string>
    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>

    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>
    <string name="signed_in">Signed in!</string>


    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="mock_server_has_token">Mock server has refresh token?</string>
    <string name="request_server_auth_code">Request server auth code?</string>
    <string name="configuration_error">Error: the value of WEB_CLIENT_ID or SERVER_BASE_URL is not  set correctly. This will cause errors when requesting a server auth code.</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_reg">Registration</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_make">Make</string>
    <string name="profile_model">Model</string>
    <string name="profile_year">Year</string>
    <string name="profile_serial">Serial #</string>
    <string name="profile_colors">Colors</string>
    <string name="profile_notes">Notes:</string>
    <string name="profile_upload">Upload Photo</string>
    <string name="profile_submit">Save</string>

    <!--Registration items-->
    <string name="title_activity_reg">Registration</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_make">Make</string>
    <string name="profile_model">Model</string>
    <string name="profile_year">Year</string>
    <string name="profile_serial">Serial #</string>
    <string name="profile_colors">Colors</string>
    <string name="profile_notes">Notes:</string>
    <string name="profile_upload">Upload Photo</string>
    <string name="profile_submit">Save</string>

    <!--BLE item-->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!--Navigation Drawer Activity-->
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="title_section1">Bluetooth</string>
    <string name="title_section2">Search</string>
    <string name="title_section3">Favorites</string>
    <string name="title_section4">Report Stolen</string>
    <string name="title_section5">Profile</string>
    <string name="title_section6">Return</string>
    <string name="maps">Maps</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Report Stolen</string>
    <string name="title_activity_nav_draw">NavDrawActivity</string>
    <string name="sign_out_text">You have signed out!</string>
    <string name="title_activity_logout2">Logout2Activity</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="title_activity_lost_bike">LostBikeActivity</string>



</resources>
