<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dip"
        android:weightSum="1">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out_button_name"
            android:enabled="false"
            android:background="@android:color/background_dark"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.25" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Continue "
        android:id="@+id/menuButton"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:background="@android:drawable/dialog_frame"
        android:nestedScrollingEnabled="true"
        android:layout_marginLeft="12dp"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/sign_in_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/status_signed_out"
        android:textSize="20dp" />


<!--    <LinearLayout
        android:id="@+id/layout_server_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_server_auth_code" />

            <CheckBox
                android:id="@+id/request_auth_code_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_has_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_server_has_token" />

            <CheckBox
                android:id="@+id/has_token_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

        </LinearLayout>

    </LinearLayout>-->


    <TextView
        android:id="@+id/circles_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circles_title"
        android:layout_marginTop="5dp"
        android:textSize="20dp" />

    <ListView
        android:id="@+id/circles_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dip" />
</LinearLayout>
